docs/api/qiskit/0.37/qiskit.quantum_info.Stinespring.mdx
---
title: Stinespring (v0.37)
description: API reference for qiskit.quantum_info.Stinespring in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.quantum_info.Stinespring
---

# Stinespring

<Class id="qiskit.quantum_info.Stinespring" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/quantum_info/operators/channel/stinespring.py" signature="Stinespring(data, input_dims=None, output_dims=None)" modifiers="class">
  Bases: `qiskit.quantum_info.operators.channel.quantum_channel.QuantumChannel`

  Stinespring representation of a quantum channel.

  The Stinespring representation of a quantum channel $\mathcal{E}$ is a rectangular matrix $A$ such that the evolution of a [`DensityMatrix`](qiskit.quantum_info.DensityMatrix "qiskit.quantum_info.DensityMatrix") $\rho$ is given by

$$
\mathcal{E}(ρ) = \mbox{Tr}_2\left[A ρ A^\dagger\right]
$$

  where $\mbox{Tr}_2$ is the [`partial_trace()`](qiskit.quantum_info.partial_trace "qiskit.quantum_info.partial_trace") over subsystem 2.

  A general operator map $\mathcal{G}$ can also be written using the generalized Stinespring representation which is given by two matrices $A$, $B$ such that

$$
\mathcal{G}(ρ) = \mbox{Tr}_2\left[A ρ B^\dagger\right]
$$

  See reference \[1] for further details.

  **References**

  1.  C.J. Wood, J.D. Biamonte, D.G. Cory, *Tensor networks and graphical calculus for open quantum systems*, Quant. Inf. Comp. 15, 0579-0811 (2015). [arXiv:1111.6950 \[quant-ph\]](https://arxiv.org/abs/1111.6950)

  Initialize a quantum channel Stinespring operator.

  **Parameters**

  *   **or** (*data (*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – Instruction or BaseOperator or matrix): data to initialize superoperator.
  *   **input\_dims** (*tuple*) – the input subsystem dimensions. \[Default: None]
  *   **output\_dims** (*tuple*) – the output subsystem dimensions. \[Default: None]

  **Raises**

  **QiskitError** – if input data cannot be initialized as a a list of Kraus matrices.

  **Additional Information:**

  If the input or output dimensions are None, they will be automatically determined from the input data. This can fail for the Stinespring operator if the output dimension cannot be automatically determined.

  ## Methods

  <span id="qiskit-quantum-info-stinespring-adjoint" />

  ### adjoint

  <Function id="qiskit.quantum_info.Stinespring.adjoint" signature="Stinespring.adjoint()">
    Return the adjoint quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix Hermitian conjugate in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{E}$, the SuperOp of the adjoint channel $\mathcal{{E}}^\dagger$ is $S_{\mathcal{E}^\dagger} = S_{\mathcal{E}}^\dagger$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-compose" />

  ### compose

  <Function id="qiskit.quantum_info.Stinespring.compose" signature="Stinespring.compose(other, qargs=None, front=False)">
    Return the operator composition with another Stinespring.

    **Parameters**

    *   **other** ([*Stinespring*](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")) – a Stinespring object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).
    *   **front** (*bool*) – If True compose using right operator multiplication, instead of left multiplication \[default: False].

    **Returns**

    The composed Stinespring.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    **Raises**

    **QiskitError** – if other cannot be converted to an operator, or has incompatible dimensions for specified subsystems.

    <Admonition title="Note" type="note">
      Composition (`&`) by default is defined as left matrix multiplication for matrix operators, while `@` (equivalent to [`dot()`](qiskit.quantum_info.Stinespring#dot "qiskit.quantum_info.Stinespring.dot")) is defined as right matrix multiplication. That is that `A & B == A.compose(B)` is equivalent to `B @ A == B.dot(A)` when `A` and `B` are of the same type.

      Setting the `front=True` kwarg changes this to right matrix multiplication and is equivalent to the [`dot()`](qiskit.quantum_info.Stinespring#dot "qiskit.quantum_info.Stinespring.dot") method `A.dot(B) == A.compose(B, front=True)`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-conjugate" />

  ### conjugate

  <Function id="qiskit.quantum_info.Stinespring.conjugate" signature="Stinespring.conjugate()">
    Return the conjugate quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix complex conjugate in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{E}$, the SuperOp of the conjugate channel $\overline{{\mathcal{{E}}}}$ is $S_{\overline{\mathcal{E}^\dagger}} = \overline{S_{\mathcal{E}}}$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-copy" />

  ### copy

  <Function id="qiskit.quantum_info.Stinespring.copy" signature="Stinespring.copy()">
    Make a deep copy of current operator.
  </Function>

  <span id="qiskit-quantum-info-stinespring-dot" />

  ### dot

  <Function id="qiskit.quantum_info.Stinespring.dot" signature="Stinespring.dot(other, qargs=None)">
    Return the right multiplied operator self \* other.

    **Parameters**

    *   **other** ([*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – an operator object.
    *   **qargs** (*list or None*) – Optional, a list of subsystem positions to apply other on. If None apply on all subsystems (default: None).

    **Returns**

    The right matrix multiplied Operator.

    **Return type**

    [Operator](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")

    <Admonition title="Note" type="note">
      The dot product can be obtained using the `@` binary operator. Hence `a.dot(b)` is equivalent to `a @ b`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-expand" />

  ### expand

  <Function id="qiskit.quantum_info.Stinespring.expand" signature="Stinespring.expand(other)">
    Return the reverse-order tensor product with another Stinespring.

    **Parameters**

    **other** ([*Stinespring*](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")) – a Stinespring object.

    **Returns**

    **the tensor product $b \otimes a$, where $a$**

    is the current Stinespring, and $b$ is the other Stinespring.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")
  </Function>

  <span id="qiskit-quantum-info-stinespring-input-dims" />

  ### input\_dims

  <Function id="qiskit.quantum_info.Stinespring.input_dims" signature="Stinespring.input_dims(qargs=None)">
    Return tuple of input dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-stinespring-is-cp" />

  ### is\_cp

  <Function id="qiskit.quantum_info.Stinespring.is_cp" signature="Stinespring.is_cp(atol=None, rtol=None)">
    Test if Choi-matrix is completely-positive (CP)
  </Function>

  <span id="qiskit-quantum-info-stinespring-is-cptp" />

  ### is\_cptp

  <Function id="qiskit.quantum_info.Stinespring.is_cptp" signature="Stinespring.is_cptp(atol=None, rtol=None)">
    Return True if completely-positive trace-preserving.
  </Function>

  <span id="qiskit-quantum-info-stinespring-is-tp" />

  ### is\_tp

  <Function id="qiskit.quantum_info.Stinespring.is_tp" signature="Stinespring.is_tp(atol=None, rtol=None)">
    Test if a channel is trace-preserving (TP)
  </Function>

  <span id="qiskit-quantum-info-stinespring-is-unitary" />

  ### is\_unitary

  <Function id="qiskit.quantum_info.Stinespring.is_unitary" signature="Stinespring.is_unitary(atol=None, rtol=None)">
    Return True if QuantumChannel is a unitary channel.
  </Function>

  <span id="qiskit-quantum-info-stinespring-output-dims" />

  ### output\_dims

  <Function id="qiskit.quantum_info.Stinespring.output_dims" signature="Stinespring.output_dims(qargs=None)">
    Return tuple of output dimension for specified subsystems.
  </Function>

  <span id="qiskit-quantum-info-stinespring-power" />

  ### power

  <Function id="qiskit.quantum_info.Stinespring.power" signature="Stinespring.power(n)">
    Return the power of the quantum channel.

    **Parameters**

    **n** (*float*) – the power exponent.

    **Returns**

    the channel $\mathcal{{E}} ^n$.

    **Return type**

    [SuperOp](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp")

    **Raises**

    **QiskitError** – if the input and output dimensions of the SuperOp are not equal.

    <Admonition title="Note" type="note">
      For non-positive or non-integer exponents the power is defined as the matrix power of the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation ie. for a channel $\mathcal{{E}}$, the SuperOp of the powered channel $\mathcal{{E}}^\n$ is $S_{{\mathcal{{E}}^n}} = S_{{\mathcal{{E}}}}^n$.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-reshape" />

  ### reshape

  <Function id="qiskit.quantum_info.Stinespring.reshape" signature="Stinespring.reshape(input_dims=None, output_dims=None, num_qubits=None)">
    Return a shallow copy with reshaped input and output subsystem dimensions.

    **Parameters**

    *   **input\_dims** (*None or tuple*) – new subsystem input dimensions. If None the original input dims will be preserved \[Default: None].
    *   **output\_dims** (*None or tuple*) – new subsystem output dimensions. If None the original output dims will be preserved \[Default: None].
    *   **num\_qubits** (*None or int*) – reshape to an N-qubit operator \[Default: None].

    **Returns**

    returns self with reshaped input and output dimensions.

    **Return type**

    BaseOperator

    **Raises**

    **QiskitError** – if combined size of all subsystem input dimension or subsystem output dimensions is not constant.
  </Function>

  <span id="qiskit-quantum-info-stinespring-tensor" />

  ### tensor

  <Function id="qiskit.quantum_info.Stinespring.tensor" signature="Stinespring.tensor(other)">
    Return the tensor product with another Stinespring.

    **Parameters**

    **other** ([*Stinespring*](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")) – a Stinespring object.

    **Returns**

    **the tensor product $a \otimes b$, where $a$**

    is the current Stinespring, and $b$ is the other Stinespring.

    **Return type**

    [Stinespring](qiskit.quantum_info.Stinespring "qiskit.quantum_info.Stinespring")

    <Admonition title="Note" type="note">
      The tensor product can be obtained using the `^` binary operator. Hence `a.tensor(b)` is equivalent to `a ^ b`.
    </Admonition>
  </Function>

  <span id="qiskit-quantum-info-stinespring-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.quantum_info.Stinespring.to_instruction" signature="Stinespring.to_instruction()">
    Convert to a Kraus or UnitaryGate circuit instruction.

    If the channel is unitary it will be added as a unitary gate, otherwise it will be added as a kraus simulator instruction.

    **Returns**

    A kraus instruction for the channel.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **QiskitError** – if input data is not an N-qubit CPTP quantum channel.
  </Function>

  <span id="qiskit-quantum-info-stinespring-to-operator" />

  ### to\_operator

  <Function id="qiskit.quantum_info.Stinespring.to_operator" signature="Stinespring.to_operator()">
    Try to convert channel to a unitary representation Operator.
  </Function>

  <span id="qiskit-quantum-info-stinespring-transpose" />

  ### transpose

  <Function id="qiskit.quantum_info.Stinespring.transpose" signature="Stinespring.transpose()">
    Return the transpose quantum channel.

    <Admonition title="Note" type="note">
      This is equivalent to the matrix transpose in the [`SuperOp`](qiskit.quantum_info.SuperOp "qiskit.quantum_info.SuperOp") representation, ie. for a channel $\mathcal{E}$, the SuperOp of the transpose channel $\mathcal{{E}}^T$ is $S_{mathcal{E}^T} = S_{\mathcal{E}}^T$.
    </Admonition>
  </Function>

  ## Attributes

  ### atol

  <Attribute id="qiskit.quantum_info.Stinespring.atol" attributeValue="1e-08" />

  ### data

  <Attribute id="qiskit.quantum_info.Stinespring.data" />

  ### dim

  <Attribute id="qiskit.quantum_info.Stinespring.dim">
    Return tuple (input\_shape, output\_shape).
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.quantum_info.Stinespring.num_qubits">
    Return the number of qubits if a N-qubit operator or None otherwise.
  </Attribute>

  ### qargs

  <Attribute id="qiskit.quantum_info.Stinespring.qargs">
    Return the qargs for the operator.
  </Attribute>

  ### rtol

  <Attribute id="qiskit.quantum_info.Stinespring.rtol" attributeValue="1e-05" />

  ### settings

  <Attribute id="qiskit.quantum_info.Stinespring.settings">
    Return settings.
  </Attribute>
</Class>

